# PyIdGen

./: LICENSE  MANIFEST.in  README.md  README.rst  makefile  setup.cfg  setup.py
pyidgen/: __init__.py  company.py  creditcard.py  driverlicense.py  occupation.py  person.py  phone.py  profile.py  ssn.py  useraccount.py
tests/: test.py
